# tips-tricks-ai-assisted-engineering

./: LICENSE  README.md
#3/: @transcript.md  GETTING_STARTED.md  README.md
#3-with-instructions/: @transcript.md  README.md
#3-with-instructions/.github/: copilot-instructions.md
#3-with-instructions/app/: README.md  main.py  pyproject.toml
#3-with-instructions/web-app/: package.json  pnpm-lock.yaml
#3-with-instructions/web-app/src/: app.css  app.html
#3-with-instructions/web-app/src/routes/: +layout.svelte  +page.svelte
#3-with-instructions/web-app/src/routes/predict/: +page.svelte
#3-with-instructions/web-app/src/routes/repositories/: +page.svelte
#3-with-instructions/web-app/src/routes/teams/: +page.svelte
#3/backend/: .env.example  requirements.txt
#3/backend/app/: main.py
#3/backend/app/api/: __init__.py  analytics.py  github.py  predictions.py  teams.py
#3/backend/app/core/: config.py  database.py
#3/backend/app/models/: __init__.py  github.py  prediction.py  team.py
#3/database/: init_db.py
#3/docs/: SPEC.md
#3/frontend/: .env.example  package.json  tailwind.config.js
#3/frontend/src/: app.css  app.html
#3/frontend/src/lib/: api.ts
#3/frontend/src/routes/: +layout.svelte  +page.svelte
#3/frontend/src/routes/predictions/: +page.svelte
#3/frontend/src/routes/teams/: +page.svelte
#3/scripts/: start_dev.py
#4/: @transcript.md  BACKEND_QUALITY_SETUP.md  SETUP_COMPLETE.md  build.py  test_setup.py
#4/.github/: copilot-instructions.md
#4/app/: main.py  pyproject.toml
#4/app/scripts/: quality.sh
#4/web-app/: .prettierignore  LINTING_SETUP.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml
#4/web-app/scripts/: quality.sh
#4/web-app/src/: app.html
#4/web-app/src/routes/: +page.svelte
#4/web-app/src/routes/predict/: +page.svelte
#4/web-app/src/routes/repositories/: +page.svelte
#4/web-app/src/routes/teams/: +page.svelte
#5/: @transcript.md  FRONTEND_QUALITY_SETUP.md  scripts.py
#5/.github/: copilot-instructions.md
#5/app/: .env.example  LINTING_SETUP.md  README.md  ruff.toml
#5/web-app/: eslint.config.js  package.json  pnpm-lock.yaml
#5/web-app/src/: app.css
#5/web-app/src/routes/: +layout.svelte  +page.svelte
#5/web-app/src/routes/predict/: +page.svelte
#5/web-app/src/routes/repositories/: +page.svelte
#5/web-app/src/routes/teams/: +page.svelte
